# npz-driver-nrf

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Kconfig  README.md  app.overlay  nPZero_nRF52.code-workspace  prj.conf  sample.yaml
.github/workflows/: release-com-modulos.yml  release-com-submodules.yml  release-com-submodulos.yml
Documentation/: Doxyfile  mainpage.txt
nPZero_Driver/: README.md
nPZero_Driver/Inc/: np0.h  np0_hal.h  npz_hal.h
nPZero_Driver/Src/: CMakeLists.txt  np0.c  np0_device_control.c  np0_hal.c  np0_logs.c  npz.c  npz_device_control.c  npz_hal.c  npz_logs.c
nPZero_internal/: CMakeLists.txt  np0_protected_registers.c  np0_protected_registers.h  np0_temp_sensor.c  np0_temp_sensor.h  npz_protected_registers.c  npz_protected_registers.h  npz_temp_sensor.c  npz_temp_sensor.h
src/: main.c  np0_ble.c  np0_ble.h  npz_ble.c  npz_ble.h  npz_hal.c
